package com.example.demo.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.example.demo.entity.Body;
import org.springframework.stereotype.Repository;

public interface BodyMapper extends BaseMapper<Body> {
}